--- a/package.json
+++ b/package.json
@@ -105,6 +105,8 @@
     "putout": "^35.1.0",
     "quibble": "^0.9.1",
     "release-it": "^17.1.1",
+    "remark-github": "^12.0.0",
+    "remark-toc": "^9.0.0",
     "rollup": "^4.12.0",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-typescript2": "^0.36.0",
@@ -117,8 +119,10 @@
     "typedoc-plugin-markdown": "^4.2.3",
     "typedoc-plugin-mdn-links": "^3.2.8",
     "typedoc-plugin-no-inherit": "^1.4.0",
+    "typedoc-plugin-remark": "^1.0.2",
     "typedoc-plugin-rename-defaults": "^0.7.1",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "unified-prettier": "^2.0.1"
   },
   "config": {
     "commitizen": {
