--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -69,5 +69,6 @@ jobs:
       - uses: jayqi/failed-build-issue-action@v1.2
         with:
           github-token: ${{ secrets.GH_TOKEN }}
+          label-name: "problems: build failed"
 
 
