--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,21 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
-
 version: 2
-updates:
-  - package-ecosystem: 'npm' # See documentation for possible values
-    directory: '/' # Location of package manifests
-    schedule:
-      interval: 'weekly'
-    commit-message:
+- package-ecosystem: "npm"
+  directory: "/"
+  groups:
+    minor-and-patch:
+      applies-to: version-updates
+      update-types:
+      - "minor"
+      - "patch"
+    major-updates:
+      applies-to: version-updates
+      update-types:
+      - "major"
+  schedule:
+    interval: "weekly"
+  commit-message:
       prefix: 'chore: 🤖 '
+  open-pull-requests-limit: 2
+  allow:
+  - dependency-type: direct
+  - dependency-type: production
