chore: 🤖 Upgrade ESLint to v9, remove Prettier, not required
With the update of ESLint, some formatting rules can be done with ESLint
that was prior only available with Prettier. Since the required part of
formattinbg before was dependent on `prettier-eslint`, and that has yet
to be updated, I felt that I should get rid of Prettier at the moment.

✅ Closes: #308

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -14,13 +14,13 @@
           - any-glob-to-any-file:
               - '.editorconfig'
               - '.eslintignore'
+              - 'eslint.config.mjs'
               - '.eslintrc.json'
               - '.eslintrc.js'
               - '.gitignore'
               - '.release-it.json'
               - '.renovate.json'
               - '.npmrc'
-              - '.prettierrc'
 'context: github':
   - any:
       - changed-files:
