--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "postcss": "rm -rf ./dist/speccer.min.css && postcss ./dist/speccer.css -o  ./dist/speccer.min.css",
     "dev": "npx browser-sync start --server 'dev' --files 'dist' --ss 'dist'",
     "docs:gen": "node ./node_modules/.bin/typedoc",
-    "style:lint": "./node_modules/.bin/eslint -c ./.eslintrc --max-warnings=0 src --ignore-path .gitignore ",
-    "style:format": "prettier-eslint --config .prettierrc --eslint-config-path $PWD/.eslintrc --list-different --write \"./src/**/*.ts\"",
+    "style:lint": "./node_modules/.bin/eslint -c ./eslint.config.mjs src",
+    "style:format": "./node_modules/.bin/eslint -c ./eslint.config.mjs src  --fix",
     "style:code": "npx putout src",
     "commit": "npx git-cz",
     "release": "release-it"
@@ -78,33 +78,29 @@
   },
   "homepage": "https://phun-ky.net/projects/speccer",
   "devDependencies": {
-    "@release-it/conventional-changelog": "^8.0.1",
+    "@eslint/js": "^9.20.0",
+    "@release-it/conventional-changelog": "^10.0.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
+    "@stylistic/eslint-plugin": "^3.1.0",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.4.2",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.0.1",
     "cobertura": "^1.0.1",
     "cssnano": "^6.0.3",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "3.7.0",
-    "eslint-plugin-compat": "^4.2.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint": "^9.20.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-compat": "^6.0.2",
+    "eslint-plugin-import": "^2.31.0",
     "git-cz": "^4.9.0",
     "glob": "^10.3.10",
     "global-jsdom": "^24.0.0",
+    "globals": "^15.14.0",
     "jsdom": "^24.0.0",
     "postcss": "^8.3.0",
     "postcss-cli": "^8.3.1",
-    "prettier": "^3.2.5",
-    "prettier-eslint": "^16.3.0",
-    "prettier-eslint-cli": "^8.0.1",
     "putout": "^35.1.0",
     "quibble": "^0.9.1",
-    "release-it": "^17.1.1",
+    "release-it": "^18.1.2",
     "remark-github": "^12.0.0",
     "remark-toc": "^9.0.0",
     "rollup": "^4.12.0",
@@ -121,7 +117,8 @@
     "typedoc-plugin-no-inherit": "^1.4.0",
     "typedoc-plugin-remark": "^1.0.2",
     "typedoc-plugin-rename-defaults": "^0.7.1",
-    "typescript": "^5.0.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.23.0",
     "unified-prettier": "^2.0.1"
   },
   "config": {
