test: 💍 Add Playwright tests for e2e tests
✅ Closes: #310

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test": "glob -c \"node --import tsx --import global-jsdom/register --test --no-warnings\" \"./src/**/__tests__/**/*.[jt]s\"",
     "pretest-ci": "rm -rf coverage && mkdir -p coverage",
     "test-ci": "glob -c \"node --import tsx --import global-jsdom/register --test --no-warnings --experimental-test-coverage --test-reporter=cobertura --test-reporter-destination=coverage/cobertura-coverage.xml --test-reporter=spec --test-reporter-destination=stdout\" \"./src/**/__tests__/**/*.[jt]s\"",
+    "pretest:e2e": "rm -rf test-results && npm run build",
+    "test:e2e": "npx playwright test",
     "rollup": "rollup -c",
     "prerollup:dev": "npm run clean && npm run styles",
     "rollup:dev": "rollup -c -w",
@@ -79,12 +81,14 @@
   "homepage": "https://phun-ky.net/projects/speccer",
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@playwright/test": "^1.50.1",
     "@release-it/conventional-changelog": "^10.0.0",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@stylistic/eslint-plugin": "^3.1.0",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.4.2",
+    "@types/node": "^22.13.1",
     "cobertura": "^1.0.1",
     "cssnano": "^6.0.3",
     "eslint": "^9.20.0",
