chore: 🤖 Add back prettier

--- a/package.json
+++ b/package.json
@@ -92,9 +92,11 @@
     "cobertura": "^1.0.1",
     "cssnano": "^6.0.3",
     "eslint": "^9.20.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-compat": "^6.0.2",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.3",
     "git-cz": "^4.9.0",
     "glob": "^10.3.10",
     "global-jsdom": "^26.0.0",
@@ -102,6 +104,7 @@
     "jsdom": "^26.0.0",
     "postcss": "^8.3.0",
     "postcss-cli": "^8.3.1",
+    "prettier": "3.5.0",
     "putout": "^38.1.1",
     "quibble": "^0.9.1",
     "release-it": "^18.1.2",
