test: 💍 Rename test files to reflect type of test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "node_modules",
     "build",
     "dist",
-    "**/tests/**",
+    "tests/**",
     "scripts",
     "dts",
     "**/__tests__/**"
