chore: 🤖 Add prettier to lint and format

--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "rollup": "rollup -c",
     "rollup:dev": "rollup -c -w",
     "style:code": "npx putout src",
-    "style:format": "./node_modules/.bin/eslint -c ./eslint.config.mjs src  --fix",
-    "style:lint": "./node_modules/.bin/eslint -c ./eslint.config.mjs src",
+    "style:format": "./node_modules/.bin/eslint -c ./eslint.config.mjs src  --fix && ./node_modules/.bin/prettier --write ./eslint.config.mjs src",
+    "style:lint": "./node_modules/.bin/eslint -c ./eslint.config.mjs src && ./node_modules/.bin/prettier --check src",
     "styles": "npm run stylus && npm run postcss",
     "stylus": "rm -rf ./dist/speccer.css && stylus ./src/styles/index.styl -o ./dist/speccer.css",
     "pretest:ci": "rm -rf coverage && mkdir -p coverage",
