--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@eslint/markdown": "^6.2.2",
     "@playwright/test": "^1.50.1",
     "@release-it/conventional-changelog": "^10.0.0",
     "@rollup/plugin-node-resolve": "^16.0.0",
