chore: 🤖 Use external dep for eslintconfig

--- a/package.json
+++ b/package.json
@@ -82,24 +82,18 @@
     }
   },
   "devDependencies": {
-    "@eslint/js": "^9.20.0",
-    "@eslint/markdown": "^6.2.2",
+    "@phun-ky/eslint-config": "^0.1.9",
     "@playwright/test": "^1.50.1",
     "@release-it/conventional-changelog": "^10.0.0",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "@stylistic/eslint-plugin": "^4.2.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@types/node": "^22.13.1",
     "cobertura": "^1.0.1",
     "cssnano": "^7.0.6",
     "eslint": "^9.20.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-import-resolver-typescript": "^4.3.4",
-    "eslint-plugin-compat": "^6.0.2",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-config-prettier": "^10.1.2",
     "git-cz": "^4.9.0",
     "glob": "^11.0.1",
     "global-jsdom": "^26.0.0",
@@ -128,7 +122,6 @@
     "typedoc-plugin-remark": "^2.0.0",
     "typedoc-plugin-rename-defaults": "^0.7.1",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.23.0",
     "unified-prettier": "^2.0.1"
   },
   "engines": {
