chore: 🤖 Use new package for eslint config

--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     }
   },
   "devDependencies": {
-    "@phun-ky/eslint-config": "^0.1.9",
     "@playwright/test": "^1.50.1",
     "@release-it/conventional-changelog": "^10.0.0",
     "@rollup/plugin-node-resolve": "^16.0.0",
@@ -93,7 +92,7 @@
     "cobertura": "^1.0.1",
     "cssnano": "^7.0.6",
     "eslint": "^9.20.0",
-    "eslint-config-prettier": "^10.1.2",
+    "eslint-config-phun-ky": "^1.0.0",
     "git-cz": "^4.9.0",
     "glob": "^11.0.1",
     "global-jsdom": "^26.0.0",
