--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ name: Publish
 on:
   pull_request:
     types: [closed]
-    branches: [ "main" ]
+    branches: ['main']
     paths:
       - '.github/**'
       - 'src/**'
@@ -45,7 +45,7 @@ jobs:
       - name: Install dependencies
         run: | # Install and link dependencies
           npm i
-      - name: "Release" # Interesting step
+      - name: 'Release' # Interesting step
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor}}@users.noreply.github.com"
@@ -62,5 +62,4 @@ jobs:
       - uses: jayqi/failed-build-issue-action@v1.2
         with:
           github-token: ${{ secrets.GH_TOKEN }}
-          label-name: "problems: build failed"
-
+          label-name: 'problems: 💔 build failed'
