--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.2",
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^24.0.3",
     "cobertura": "^1.0.1",
     "cssnano": "^7.0.6",
