--- a/package.json
+++ b/package.json
@@ -80,9 +80,9 @@
     "pretest:ci": "rm -rf coverage && mkdir -p coverage",
     "pretest:e2e": "rm -rf test-results && npm run build",
     "test": "npm run test:unit",
-    "test:ci": "glob -c \"node --import tsx --import global-jsdom/register --test --no-warnings --experimental-test-coverage --test-reporter=cobertura --test-reporter-destination=coverage/cobertura-coverage.xml --test-reporter=spec --test-reporter-destination=stdout\" \"./src/**/__tests__/**/*.spec.[jt]s\"",
+    "test:ci": "glob-bin -c \"node --import tsx --import global-jsdom/register --test --no-warnings --experimental-test-coverage --test-reporter=cobertura --test-reporter-destination=coverage/cobertura-coverage.xml --test-reporter=spec --test-reporter-destination=stdout\" \"./src/**/__tests__/**/*.spec.[jt]s\"",
     "test:e2e": "npx playwright test",
-    "test:unit": "glob -c \"node --import tsx --import global-jsdom/register --test --no-warnings\" \"./src/**/__tests__/**/*.spec.[jt]s\""
+    "test:unit": "glob-bin -c \"node --import tsx --import global-jsdom/register --test --no-warnings\" \"./src/**/__tests__/**/*.spec.[jt]s\""
   },
   "config": {
     "commitizen": {
@@ -103,7 +103,7 @@
     "eslint": "^9.20.0",
     "eslint-config-phun-ky": "^1.0.0",
     "git-cz": "^4.9.0",
-    "glob": "^13.0.0",
+    "glob-bin": "^1.0.0",
     "global-jsdom": "^27.0.0",
     "globals": "^16.0.0",
     "jsdom": "^27.0.0",
