fix: 🐛 Release with trusted publishing

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,6 +29,9 @@ jobs:
   publish:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # For git operations
+      id-token: write # < REQUIRED FOR OIDC
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -42,9 +45,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '>=22.8.0'
+      - run: npm install -g npm@latest
       - name: Install dependencies
         run: | # Install and link dependencies
-          npm i
+          npm ci
           git checkout -- package-lock.json
       - name: 'Release' # Interesting step
         run: |
@@ -52,7 +56,6 @@ jobs:
           git config user.email "${{ github.actor}}@users.noreply.github.com"
           npm run release
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
   notify:
     name: Notify failed build
